# cdel

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  README.md  build.sh  package-lock.json  package.json  run.sh  server.js
docs/: report.md
include/: DeadInstructionEliminator.h
public/: index.html  script.js  style.css
src/: DeadInstructionEliminator.cpp  main.cpp
testcases/: dead_code.c
tests/: run_tests.sh  test1.ll  test1_opt.ll  test2.ll  test2_opt.ll  test3.ll  test3_opt.ll  test4.ll  test4_opt.ll  test5.ll  test5_opt.ll  test_c_dead.c  test_c_dead.ll  test_c_dead_opt.ll  test_web_input.c  test_web_input.ll  test_web_input_opt.ll
